--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "format": "eslint --fix src && prettier --write src public"
   },
@@ -25,6 +27,7 @@
     "@types/react": "~18.0.0",
     "@types/react-dom": "~18.0.0",
     "eslint-config-prettier": "~8.5.0",
+    "gh-pages": "~4.0.0",
     "prettier": "~2.7.0"
   },
   "eslintConfig": {
