--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/react-dom": "~18.0.0",
     "eslint-config-prettier": "~8.5.0",
     "gh-pages": "~4.0.0",
-    "prettier": "~2.7.0"
+    "prettier": "~2.7.0",
+    "puppeteer": "~19.2.0"
   },
   "eslintConfig": {
     "extends": [
