--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "homepage": "https://pete8144.github.io/iseps-perktree-simulator",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn generate-guide",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "format": "eslint --fix src && prettier --write src public"
+    "format": "eslint --fix src && prettier --write src public",
+    "generate-guide": "node --loader ts-node/esm scripts/generate-guide-page"
   },
   "dependencies": {
     "@emotion/react": "~11.10.0",
@@ -29,7 +30,8 @@
     "eslint-config-prettier": "~8.5.0",
     "gh-pages": "~4.0.0",
     "prettier": "~2.7.0",
-    "puppeteer": "~19.2.0"
+    "puppeteer": "~19.2.0",
+    "ts-node": "~10.9.0"
   },
   "eslintConfig": {
     "extends": [
